--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon" />
   </head>
   <body>
-    <section class="social_container">
-      <div class="social_upper">
-        <img src="./images/avatar-jessica.jpeg" alt="Social Image" />
-        <h1>Jessica Randall</h1>
-        <p class="location_text">London, United Kingdom</p>
-        <p class="quote">"Front-end developer and avid reader."</p>
-      </div>
-      <div class="social_lower">
-        <button>GitHub</button>
-        <button>Frontend Mentor</button>
-        <button>LinkedIn</button>
-        <button>Twitter</button>
-        <button>Instagram</button>
-      </div>
-    </section>
+    <main>
+      <section class="social_container">
+        <div class="social_upper">
+          <img src="./images/avatar-jessica.jpeg" alt="Social Image" />
+          <h1>Jessica Randall</h1>
+          <p class="location_text">London, United Kingdom</p>
+          <p class="quote">"Front-end developer and avid reader."</p>
+        </div>
+        <div class="social_lower">
+            <button>GitHub</button>
+            <button>Frontend Mentor</button>
+            <button>LinkedIn</button>
+            <button>Twitter</button>
+            <button>Instagram</button>
+          </div>
+        </section>
+      </main>
   </body>
 </html>
